--- a/app/src/main/res/layout/date_card_view.xml
+++ b/app/src/main/res/layout/date_card_view.xml
@@ -8,7 +8,7 @@
     >
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/cvDate"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
